feat: FAQ english content

--- a/faq-english.html
+++ b/faq-english.html
@@ -35,7 +35,7 @@
                     <a class="orange hover_orange" href="faq-english.html">FAQ</a>
                 </li>
                 <li>
-                    <a class="hover_orange" href="cousins-english.html">Our cousins</a>
+                    <a class="hover_orange" href="cousins-english-wip.html">Our cousins</a>
                 </li>
                 <li>
                     <a class="hover_orange" href="faq.html"><img
@@ -78,105 +78,103 @@
 
             <section class="container">
                 <article>
-                    <h3>Qu’est ce qu’un laboratoire d’innovation publique?</h3>
-                    <p class="intro">Un laboratoire d’innovation publique désigne une équipe interne à la
-                        collectivité, qui propose de nouvelles méthodes de conception et de mise en oeuvre des
-                        politiques publiques. Un labo a pour but de mieux prendre en compte les besoins des usagers,
-                        de décloisonner et de faciliter le travail en transversalité au sein de la collectivité. Les
-                        labos d’innovation peuvent prendre différentes “formes” et assumer des fonctions diverses :
-                        veille et prospective, ethnographie, prototypage rapide, expérimentation, animation
-                        d’ateliers créatifs, diffusion de pratiques et formation …
+                    <h3>What is a public innovation lab ? </h3>
+                    <p class="intro">A public innovation lab consists of a team set up within the services of
+                        regional/local government to propose new methods for designing and implementing public policies.
+                        The goal of the lab is to better account for the needs of users, to break down in-house barriers
+                        and to facilitate working across all the public services departments. Innovation labs may take
+                        various forms and assume a variety of functions: horizon scanning and foresight activities,
+                        ethnographic approaches, rapid prototyping, experimentation, the leading of creative workshops,
+                        the dissemination of practices and organization of training, etc.
                     </p>
 
                 </article>
 
                 <article>
-                    <h3>Qu’est ce que la transfo?</h3>
-                    <p class="intro">La <strong>Transfo Code Source</strong> s’inscrit le cadre du programme
-                        <a href="http://www.la27eregion.fr/transfo/" target="_blank">La transfo</a>
-                        , de <strong>La 27e Région</strong>, qui vise à accompagner les collectivités territoriales
-                        dans la création de leur propre cellule d’innovation par les usages, en s’appuyant sur un
-                        groupe d’agents (“les ambassadeurs*”) représentatifs de la diversité des métiers d’une
-                        administration publique. Ce programme expérimental a été mené de 2016 à 2020 en partenariat
-                        avec sept collectivités (les Villes de Mulhouse et Paris, la Communauté urbaine de
-                        Dunkerque, les Métropoles de Lille, Strasbourg et Metz et la Région Occitanie) et avec le
-                        soutien de la fondation Bloomberg Philanthropies. Dans chaque collectivité, une équipe
-                        pluridisciplinaire de trois à quatre personnes (“les résidents”) anime des sessions de
-                        travail de deux à trois jours consécutifs par mois avec les agents, pendant 16 à 18 mois.
-                        Ces sessions portent sur des cas pratiques, partant de vrais problématiques de la
-                        collectivité, qui vont servir de banc d’essai pour le futur laboratoire, et/ou sur la
-                        préfiguration du futur laboratoire. Tout au long du programme, des rencontres croisées
-                        appelées InterTransfo sont organisées afin que tous les participants au programme puissent
-                        échanger et construire un savoir commun. <br>
-                        L’ensemble de la démarche à fait l’objet d’une documentation ouverte, et les productions qui
-                        en ont découlées sont sous licence libre et accessibles sur
-                        <a href="http://latransfo.la27eregion.fr" target="_blank">ce blog</a>.
+                    <h3>What is La Transfo ? </h3>
+                    <p class="intro">The <strong>La Transfo Source Code</strong> forms part of
+                        <strong>La 27e Région</strong>’s <a href="http://www.la27eregion.fr/transfo/" target="_blank">La
+                            transfo</a> program; it is designed to help regional/local public services create their
+                        own innovation unit, focusing on innovation/transformation based on the experience of the users.
+                        The experimental lab is supported by a group of public agents, the “ambassadors”, who represent
+                        the diversity of professions of a public administration. This experimental program was conducted
+                        from 2016 to 2020 in partnership with seven public authorities (the cities of Mulhouse, Paris,
+                        Dunkirk and surrounding urban area, the Metropolis of Lille, Strasbourg, Metz and the Region of
+                        Occitanie), and was co-funded by the Bloomberg Philanthropies Foundation. In each city/region, a
+                        multi-disciplinary team of three or four persons, the “residents”, led two- to three-day work
+                        sessions every month with the public agents for a 16- to 18-month period. The sessions were
+                        focused on practical cases based on real issues encountered in the city/region; these served as
+                        the test bench for the future laboratory and/or as its blueprint. Encounters among the various
+                        public services, called Inter-Transfos, were organized throughout program duration, so that all
+                        could participate in the program, exchange ideas and build and share knowledge together.<br>
+                        The entire initiative was openly documented and the work produced is open source content that is
+                        accessible on
+                        <a href="http://latransfo.la27eregion.fr/about/?lang=en" target="_blank">this blog</a>.
                     </p>
                 </article>
 
                 <article>
-                    <h3>Qui est la 27e Région? </h3>
-                    <p class="intro">De statut associatif, la 27e Région inspire et invente les services, les
-                        administrations et
-                        les modes d’action publics de demain. C’est un laboratoire de transformation publique,
-                        constitué en association indépendante, qui propose un espace pluridisciplinaire, réflexif et
-                        expérimental pour construire les futurs souhaitables de l’action publique. A travers des
-                        projets de recherche-action, des actions de diffusion, elle promeut l’expérimentation et
-                        l’essai-erreur dans l’action publique, teste avec des administrations de nouveaux services,
-                        outils, méthodes et modes d’organisation et cherche à faire valoir des alternatives aux
-                        idéologies dominantes de la transformation publique. Pour cela elle mobilise des concepts
-                        inspirés du design, des sciences sociales et des mouvements alternatifs (do-it-yourself,
-                        culture du libre, éducation populaire), et s’appuie sur une communauté de praticiens et
-                        d’agents publics à travers toute la France. Elle a été à la fois l’initiatrice, le pilote et
-                        la facilitatrice du programme La Transfo, et est à l'initiative du site “Transfo Code
-                        Source”. En savoir plus : <a href="http://www.la27eregion.fr"
-                            target="_blank">http://www.la27eregion.fr</a>.
+                    <h3>What is the 27e Région ?</h3>
+                    <p class="intro">With an associative status, la 27e Région inspires and invents the services,
+                        administrations and courses for public action of tomorrow. It is a lab set up to change public
+                        policy and an independent association proposing a multi-disciplinary, deliberative and
+                        experimental space to build desirable futures for public action. Via action-research projects
+                        and knowledge sharing, the association promotes experimentation and a trial-and-error approach
+                        to public action, tests new services, tools, methods and forms of organization with public
+                        administrations and seeks alternatives to dominant ideologies governing the transformation of
+                        public policy. To accomplish this, la 27e Région mobilizes concepts inspired by design, the
+                        social sciences and alternative movements (do-it-yourself projects, an open source culture,
+                        adult education actions) and is backed by a community of practitioners and public agents located
+                        throughout France. It acts, at the same time, as the initiator, the leader and the facilitator
+                        of the La Transfo program and has initiated creation of the “La Transfo Source Code” site. To
+                        learn more:
+                        <a href="http://www.la27eregion.fr/en/" target="_blank">http://www.la27eregion.fr/en/</a>.
                     </p>
                 </article>
 
                 <article>
-                    <h3>Qu’est ce que le design des politique publiques?</h3>
-                    <p class="intro">Le design est une démarche de conception créative, généralement de produits ou
-                        de services, centrée sur l’utilisateur. C’est une méthode, mais aussi une façon de penser et
-                        de comprendre les projets. Au-delà des designers, le design concerne tous les concepteurs,
-                        les créateurs, qui appliquent une logique d’innovation itérative, transformatrice, centrée
-                        sur l’utilisateur, avec une haute exigence de compréhension et d’esthétique des productions.
-                        Dans cet ensemble, le design des politiques publiques pointe une pratique pluridisciplinaire
-                        et collective et ensemble de méthodes qui permettent de réinterroger et de concevoir des
-                        politiques publiques en repartant du point de vue des usagers citoyens, en les associant à
-                        des tests et des simulations, en réalisant des prototypes de solutions pouvant
-                        ultérieurement être déployées avec de meilleures chances de succès.
+                    <h3>What is public policy design ?</h3>
+                    <p class="intro">Design is a creative means for devising products and services focused on users.
+                        It’s a method, but also a way of thinking about and of understanding projects. Beyond the
+                        “designers’, the concept of design concerns all those who apply an iterative, transforming
+                        innovation logic focused on the user, and is accompanied by high expectations for understanding
+                        and for the esthetics of what is produced. In this context, the design of public policies points
+                        to a multi-disciplinary and collective approach and to a set of methods allowing for questioning
+                        public policies anew, starting from the standpoint of its users/citizens. This is accomplished
+                        by associating the users with trials and simulations and by developing prototypes of solutions
+                        that could be deployed later on with better chances of success.
                     </p>
                 </article>
 
                 <article>
-                    <h3>Qui sont les “ambassadeurs” et les “résidents” de la Transfo? </h3>
-                    <p class="intro">Dans chaque démarche de montage de labo, un groupe de 20 agents volontaires a
-                        été mandaté pour suivre de bout en bout la démarche : ce sont les ambassadeurs. Ils sont
-                        présent à chaque session, participe à l’élaboration du laboratoire d’innovation, prennent
-                        part à la conduite de cas pratique. La démarche est par ailleurs animée par une équipe
-                        pluridisciplinaire de 3 professionnels expérimentés, mandatés par La 27e Région pour mener
-                        La Transfo au sein d’une collectivité : ce sont les “résidents”.
+                    <h3>Who are the Transfo’s ambassadors and residents ?</h3>
+                    <p class="intro">In every procedure for setting up the experimental lab, a group of 20 volunteer
+                        agents are mandated to follow the action from beginning to end: these are the “ambassadors”.
+                        They participate in each work session, assist in developing the innovation lab and take part in
+                        carrying out its practical applications (cases). A multi-disciplinary unit composed of three
+                        experienced professionals is appointed by La 27e Région to conduct La Transfo within the
+                        regional/local authority; these are the “residents”.
                     </p>
                     <div class=" links-box"
                         style="background-image: url(images/left-hand.png), url(images/right-hand.png);">
-                        <p id="involveAndForm" class="goToSection">Comment impliquer les agents publics?</p>
-                        <p id="multidisciplinary" class="goToSection">Comment intégrer des disciplines diverses?</p>
+                        <p id="involveAndForm" class="goToSection">How to involve the public agents ?</p>
+                        <p id="multidisciplinary" class="goToSection">How to incorporate a variety of disciplines ?</p>
                     </div>
                 </article>
 
                 <article>
-                    <h3>Qu’est ce qu’un “cas pratique”? Qu’est ce qu’une “session”?</h3>
-                    <p class="intro">Le protocole de montage de labo s’appuie sur deux unités importantes : les
-                        Sessions et les cas pratiques : les sessions sont des séquences de travail de 2 à 3 jours
-                        qui ont lieu au siège de la collectivité ou sur les sites liés aux cas traités, et
-                        impliquant résidents et agents ambassadeurs. Les cas pratiques sont des projets spécifiques
-                        menés par l’équipe (animateur de la démarche et agents ambassadeurs) pendant les sessions.
+                    <h3>What do we refer as a “work session” and “practical case” ?</h3>
+                    <p class="intro">The protocol for conducting the experimental lab comprises two major components:
+                        work sessions and practical cases. Sessions consist of 2- to 3- day work periods that either
+                        take place in the municipality’s or region’s offices or on sites linked to the practical cases
+                        being tested. Both the residents and the ambassador agents participate in these sessions.
+                        Practical cases consist of specific projects developed by the program participants during the
+                        work sessions.
                     </p>
                     <div class="links-box"
                         style="background-image: url(images/left-hand.png), url(images/right-hand.png);">
-                        <p id="programRhythm" class="goToSection">Comment bien rythmer la démarche?</p>
-                        <p id="concreteCase" class="goToSection">Comment travailler à partir de cas?</p>
+                        <p id="programRhythm" class="goToSection">How to pace program rollout ?</p>
+                        <p id="concreteCase" class="goToSection">How to work on a case basis ?</p>
                     </div>
                 </article>
 
