feat: english CSS adjust

--- a/cousins.html
+++ b/cousins.html
@@ -38,7 +38,7 @@
                     <a class="orange hover_orange" href="cousins.html">Nos cousins</a>
                 </li>
                 <li>
-                    <a class="hover_orange" href="cousins-english.html"><img
+                    <a class="hover_orange" href="cousins-english-wip.html"><img
                             src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/joypixels/257/flag-united-kingdom_1f1ec-1f1e7.png"
                             alt="drapeau anglais" class="flag"></a>
                 </li>
@@ -115,7 +115,7 @@
 
                     </div>
 
-                    <!-- TEMOIGNAGE PIA -->
+                    <!-- TESTIMONIE PIA -->
 
                     <div class="temoignages">
 
@@ -229,7 +229,7 @@
                         » de l’université de Bordeaux a été associé à la mission.
                     </p>
 
-                    <!-- TEMOIGNAGE -->
+                    <!-- TESTIMONIE -->
 
                     <div class="temoignages">
 
