feat: programPace english content

--- a/about-english.html
+++ b/about-english.html
@@ -85,7 +85,7 @@
                         consists of implementing seven principal actions:
                         set up an <strong id="experimental-mobile">experimental framework</strong> (ce),
                         establish a <strong id="multidisciplinary-mobile">multi-disciplinary approach</strong> (mp),
-                        pace <strong id="programRhythm-mobile">program rollout</strong> (p),
+                        pace <strong id="programPace-mobile">program rollout</strong> (p),
                         involve and train the <strong id="involveAndForm-mobile">public agents</strong> (a),
                         work on the basis of <strong id="concreteCase-mobile">concrete practical cases</strong> (cc),
                         build support from the surrounding administrative <strong
@@ -135,7 +135,7 @@
                                     </p>
                                 </li>
                                 <li>
-                                    <p id="programRhythm">pace <span>program rollout</span> (p)</p>
+                                    <p id="programPace">pace <span>program rollout</span> (p)</p>
                                 </li>
                                 <li>
                                     <p id="involveAndForm">involve and train the <span>public agents</span> (a)</p>
