--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
                         lors du programme La Transfo entre 2016 et 2020. Sept principes actifs composent La Transfo:
                         <strong id="experimental-mobile">poser un cadre expérimental</strong> (ce),
                         <strong id="multidisciplinary-mobile">passer en mode pluridisciplinaire</strong> (mp),
-                        <strong id="programRhythm-mobile">rythmer le programme</strong> (p),
+                        <strong id="programPace-mobile">rythmer le programme</strong> (p),
                         <strong id="involveAndForm-mobile">impliquer et former les agents</strong> (a),
                         <strong id="concreteCase-mobile">travailler à partir de cas concrets</strong> (cc),
                         <strong id="ecosysteme-mobile">s’appuyer sur l'écosystème</strong> (e),
@@ -130,7 +130,7 @@
                                     <p id="multidisciplinary"><span>passer en mode pluridisciplinaire</span> (mp)</p>
                                 </li>
                                 <li>
-                                    <p id="programRhythm"><span>rythmer le programme</span> (p)</p>
+                                    <p id="programPace"><span>rythmer le programme</span> (p)</p>
                                 </li>
                                 <li>
                                     <p id="involveAndForm"><span>impliquer et former les agents</span> (a)</p>
