--- a/faq-english.html
+++ b/faq-english.html
@@ -173,7 +173,7 @@
                     </p>
                     <div class="links-box"
                         style="background-image: url(images/left-hand.png), url(images/right-hand.png);">
-                        <p id="programRhythm" class="goToSection">How to pace program rollout ?</p>
+                        <p id="programPace" class="goToSection">How to pace program rollout ?</p>
                         <p id="concreteCase" class="goToSection">How to work on a case basis ?</p>
                     </div>
                 </article>
