--- a/faq.html
+++ b/faq.html
@@ -174,7 +174,7 @@
                     </p>
                     <div class="links-box"
                         style="background-image: url(images/left-hand.png), url(images/right-hand.png);">
-                        <p id="programRhythm" class="goToSection">Comment bien rythmer la démarche?</p>
+                        <p id="programPace" class="goToSection">Comment bien rythmer la démarche?</p>
                         <p id="concreteCase" class="goToSection">Comment travailler à partir de cas?</p>
                     </div>
                 </article>
