--- a/index.html
+++ b/index.html
@@ -860,7 +860,7 @@
 
         <!-- 3 - RYTHMER LE PROGRAMME -->
 
-        <section id="programRhythm" class="tab">
+        <section id="programPace" class="tab">
 
             <header class="header">
 
@@ -902,10 +902,10 @@
                     </div>
 
                     <div class="content bg"
-                        style="background-image:  url(images/programRhythm/suspensions-legendes.svg), url(images/programRhythm/suspensions.png);">
+                        style="background-image:  url(images/programPace/suspensions-legendes.svg), url(images/programPace/suspensions.png);">
                         <p class="fig">Fig.p</p>
 
-                        <div class="mini-img" style="background-image: url(images/programRhythm/suspensions-min.png);">
+                        <div class="mini-img" style="background-image: url(images/programPace/suspensions-min.png);">
                             <p class="fig-cs">Fig.cs</p>
                         </div>
 
@@ -964,7 +964,7 @@
 
                             <!-- IMG -->
 
-                            <img id="timeline" src="images/programRhythm/timeline.jpg"
+                            <img id="timeline" src="images/programPace/timeline.jpg"
                                 alt="une timeline géante pour définir le rythme des sessions">
 
                             <!-- WORKTIME -->
@@ -991,7 +991,7 @@
 
                             <!-- IMG -->
 
-                            <img id="rhythmExercice" src="images/programRhythm/rythmer.jpg"
+                            <img id="rhythmExercice" src="images/programPace/rythmer.jpg"
                                 alt="rythmer l'été avec des exercices pratiques">
 
                             <!-- ADJUSTMENTS -->
@@ -1121,23 +1121,23 @@
                     <div class=" links-box"
                         style="background-image: url(images/left-hand.png), url(images/right-hand.png);">
                         <p>
-                            <a href="assets/outils/programRhythm/1-processus-global.pdf"
+                            <a href="assets/outils/programPace/1-processus-global.pdf"
                                 download="processus_global_transfo" target="_blank"> Processus global de la Transfo
                             </a>
                         </p>
                         <p>
-                            <a href="assets/outils/programRhythm/2-deroule-mulhouse.pdf"
+                            <a href="assets/outils/programPace/2-deroule-mulhouse.pdf"
                                 download="deroule_detaille_mulhouse" target="_blank">Exemple de Déroulé détaillé d’une
                                 Transfo (Mulhouse)
                             </a>
                         </p>
                         <p>
-                            <a href="assets/outils/programRhythm/3-deroule-metz.pdf" download="deroule_session_metz"
+                            <a href="assets/outils/programPace/3-deroule-metz.pdf" download="deroule_session_metz"
                                 target="_blank">Exemple de déroulé de deux sessions (Metz)
                             </a>
                         </p>
                         <p>
-                            <a href="assets/outils/programRhythm/4-deroule-metz-2.pdf" download="deroule_session_metz_2"
+                            <a href="assets/outils/programPace/4-deroule-metz-2.pdf" download="deroule_session_metz_2"
                                 target="_blank"> Exemple de déroulé de deux sessions 2/2 (Metz)
                             </a>
                         </p>
