--- a/index.html
+++ b/index.html
@@ -306,15 +306,15 @@
                     </div>
 
                     <div>
-                        <p><span>☛ &nbsp;défi 001 </span>Une Transfo encore plus expérimentale et partenariale,
+                        <p><span>☛ &nbsp;Défi 001 </span>Une Transfo encore plus expérimentale et partenariale,
                             embarquant
                             deux collectivités d’un même territoire? 
                         </p>
-                        <p><span>☛ &nbsp;défi 002 </span>Une Transfo élus / administration, qui impliquerait des élus
+                        <p><span>☛ &nbsp;Défi 002 </span>Une Transfo élus / administration, qui impliquerait des élus
                             comme
                             “ambassadeurs”?
                         </p>
-                        <p><span>☛ &nbsp;défi 003 </span>Un “démarreur bienveillant” de La Transfo avec la direction
+                        <p><span>☛ &nbsp;Défi 003 </span>Un “démarreur bienveillant” de La Transfo avec la direction
                             générale
                             (c’est à dire un mode opératoire pour clarifier le contexte et formuler/réinterroger les
                             attentes des décideurs avant de démarrer le programme)
@@ -724,11 +724,11 @@
                     </div>
 
                     <div>
-                        <p><span>☛ &nbsp;défi 001 </span>Associer un.e spécialiste de l’ingénierie pédagogiques à la
+                        <p><span>☛ &nbsp;Défi 001 </span>Associer un.e spécialiste de l’ingénierie pédagogiques à la
                             démarche, pour expérimenter d’autres formats et creuser les croisement entre innovation
                             pédagogique et transformation des administrations.
                         </p>
-                        <p><span>☛ &nbsp;défi 002 </span>Constituer un “pool” de professionnels pluridisciplinaires
+                        <p><span>☛ &nbsp;Défi 002 </span>Constituer un “pool” de professionnels pluridisciplinaires
                             intervenant ponctuellement, en appui à l’équipe design, en y associant des expertises
                             nouvelles (par exemple neurosciences, risques psychosociaux, community organizing). </p>
                     </div>
@@ -858,7 +858,7 @@
         </section>
 
 
-        <!-- 3 - RYTHMER LE PROGRAMME -->
+        <!-- 3 - PROGRAM PACE -->
 
         <section id="programPace" class="tab">
 
@@ -1427,10 +1427,10 @@
                     </div>
 
                     <div>
-                        <p><span>☛ &nbsp;défi 001 </span>Mettre en place un processus de certification ou de validation
+                        <p><span>☛ &nbsp;Défi 001 </span>Mettre en place un processus de certification ou de validation
                             des acquis par les ressources humaines.
                         </p>
-                        <p><span>☛ &nbsp;défi 002 </span>Faciliter l’intégration de nouveaux agents et la diffusion des
+                        <p><span>☛ &nbsp;Défi 002 </span>Faciliter l’intégration de nouveaux agents et la diffusion des
                             pratiques avec un système de parrains.
                         </p>
                     </div>
@@ -1957,11 +1957,11 @@
                     </div>
 
                     <div>
-                        <p><span>☛ &nbsp;défi 001 </span>Parvenir à impliquer davantage les élus dans un cas pratique,
+                        <p><span>☛ &nbsp;Défi 001 </span>Parvenir à impliquer davantage les élus dans un cas pratique,
                             soit en les positionnant en tant que commanditaires d’un cas, soit en les impliquant dans
                             les étapes méthodologiques de conduite d’un cas.
                         </p>
-                        <p><span>☛ &nbsp;défi 002 </span>Penser l’après cas pratique : imaginer une manière
+                        <p><span>☛ &nbsp;Défi 002 </span>Penser l’après cas pratique : imaginer une manière
                             d’accompagner la direction porteuse de cas dans l’appropriation et l’usages du travail de La
                             Transfo dans ses projets réels.
                         </p>
@@ -2336,13 +2336,13 @@
                     </div>
 
                     <div>
-                        <p><span>☛ &nbsp;défi 001 </span>Faire une Transfo avec un groupe composés d’innovateurs
+                        <p><span>☛ &nbsp;Défi 001 </span>Faire une Transfo avec un groupe composés d’innovateurs
                             internes (innovation managériale ou RH, chargé de projets citoyens, chargé d’open data…).
                         </p>
-                        <p><span>☛ &nbsp;défi 002 </span>Une Transfo avec acteurs du territoire, dans le cadre d’un
+                        <p><span>☛ &nbsp;Défi 002 </span>Une Transfo avec acteurs du territoire, dans le cadre d’un
                             groupe mixte agents interne - partenaires externe.
                         </p>
-                        <p><span>☛ &nbsp;défi 003 </span>Intégrer dans l’ADN du projet l’ambition de faire du labo un
+                        <p><span>☛ &nbsp;Défi 003 </span>Intégrer dans l’ADN du projet l’ambition de faire du labo un
                             outils partagé avec une gouvernance ouverte, impliquant l’ensemble de l'écosystème interne
                             et externe.
                         </p>
@@ -2699,9 +2699,9 @@
                     </div>
 
                     <div>
-                        <p><span>☛ &nbsp;défi 001 </span>Et si on ouvrait les temps de co-construction du labo à des
+                        <p><span>☛ &nbsp;Défi 001 </span>Et si on ouvrait les temps de co-construction du labo à des
                             citoyens?</p>
-                        <p><span>☛ &nbsp;défi 002 </span>Et si on ne partait pas de zéro mais de deux ou trois modèles
+                        <p><span>☛ &nbsp;Défi 002 </span>Et si on ne partait pas de zéro mais de deux ou trois modèles
                             de labos différents qu’on testerait pendant la Transfo?
                         </p>
                     </div>
