feat: concrete case english content

--- a/index.html
+++ b/index.html
@@ -1624,9 +1624,9 @@
                         </div>
 
                         <ul class="legende">
-                            <li>(a) Adhésion</li>
                             <li>(m) Mobilisation</li>
                             <li>(i) Impacts</li>
+                            <li>(a) Adhésion et enthousiasme</li>
                             <li>(tc) Tansfert des compétences</li>
                             <li>(pp) Portage politique</li>
                             <li>(pe) Partenariats externes</li>
