feat: add wip illustration

--- a/cousins-english-wip.html
+++ b/cousins-english-wip.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/png" href="images/logos/favicon.png" />
 </head>
 
-<body class="light">
+<body class="light wip">
     <header class="mainNav sticky">
 
         <!-- NAV BAR -->
@@ -69,7 +69,12 @@
         <!-- CONTENT -->
 
         <div class="content">
-            <p class="sheet">( The page is currently under construction. )</p>
+
+            <p class="sheet">( The page is currently under construction )</p>
+
+            <div class="container">
+                <img src="images/workinprogress.png" alt="roadworks sign">
+            </div>
 
         </div>
 
