--- a/english.html
+++ b/english.html
@@ -50,12 +50,12 @@
         <div class="information marquee-info">
             <div class="container marquee-info-content">
 
-                <p class="info-content">Welcome to the La Transfo Code Source website, this program is about
-                    experimenting with public innovation laboratories within administrations.
-                    <span>Welcome to the La Transfo Code Source website, this program is about experimenting with public
-                        innovation laboratories within administrations.</span>
-                    <span>Welcome to the La Transfo Code Source website, this program is about experimenting with public
-                        innovation laboratories within administrations.</span>
+                <p class="info-content">Welcome to the La Transfo Code Source website - this program is about testing
+                    and co-creating an innovation lab within a public administrtion.
+                    <span>Welcome to the La Transfo Code Source website - this program is about testing and
+                        co-creating an innovation lab within a public administrtion.</span>
+                    <span>Welcome to the La Transfo Code Source website - this program is about testing and
+                        co-creating an innovation lab within a public administrtion.</span>
                 </p>
 
             </div>
