feat: change language switch button

--- a/cousins-english.html
+++ b/cousins-english.html
@@ -37,10 +37,8 @@
                 <li>
                     <a class="orange hover_orange" href="cousins-english.html">Our cousins</a>
                 </li>
-                <li>
-                    <a class="hover_orange" href="cousins.html"><img
-                            src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/joypixels/257/flag-st-martin_1f1f2-1f1eb.png"
-                            alt="french flag" class="flag"></a>
+                <li class="language french">
+                    <a class="hover_orange" href="cousins.html">FR</a>
                 </li>
             </ul>
 
