--- a/faq.html
+++ b/faq.html
@@ -37,10 +37,8 @@
                 <li>
                     <a class="hover_orange" href="cousins.html">Nos cousins</a>
                 </li>
-                <li>
-                    <a class="hover_orange" href="faq-english.html"><img
-                            src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/joypixels/257/flag-united-kingdom_1f1ec-1f1e7.png"
-                            alt="drapeau anglais" class="flag"></a>
+                <li class="language">
+                    <a class="hover_orange" href="faq-english.html">EN</a>
                 </li>
             </ul>
         </nav>
