feat: english open tab script

--- a/about-english.html
+++ b/about-english.html
@@ -261,7 +261,7 @@
         </div>
     </main>
 
-    <script src="js/about-script.js"></script>
+    <script src="js/about-english-script.js"></script>
 </body>
 
 </html>
