--- a/faq-english.html
+++ b/faq-english.html
@@ -181,7 +181,7 @@
 
     </main>
 
-    <script src="js/about-script.js"></script>
+    <script src="js/about-english-script.js"></script>
 </body>
 
 </html>
