feat: add portfolio

--- a/about-english.html
+++ b/about-english.html
@@ -190,7 +190,7 @@
 
                 <div class="title-box">
 
-                    <h2>Our parters</h2>
+                    <h2>Our partners</h2>
                     <div>
                         <p>MAY 04 2020</p>
                         <p>( No Model ) N°. 00P.001</p>
@@ -258,6 +258,35 @@
                     </p>
                 </div>
             </section>
+
+            <!-- WEBSITE -->
+
+            <section class="contact container">
+
+                <!-- TITLE -->
+
+                <div class="title-box">
+
+                    <h2>Our Web Site</h2>
+                    <div>
+                        <ul>
+                            <li> <a href="https://annechariotte.github.io/portfolio/" target="_blank">
+                                    <img src="images/about/drevensek-portfolio.png" alt="portfolio logo">
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+
+                </div>
+
+                <div class="intro">
+                    <p>Interface design and development by
+                        <a href="https://annechariotte.github.io/portfolio/" target="_blank">Anne-Charlotte
+                            Drevensek</a>.
+                    </p>
+                </div>
+            </section>
+
         </div>
     </main>
 
