--- a/about.html
+++ b/about.html
@@ -255,6 +255,35 @@
                     </p>
                 </div>
             </section>
+
+            <!-- WEBSITE -->
+
+            <section class="contact container">
+
+                <!-- TITLE -->
+
+                <div class="title-box">
+
+                    <h2>Notre site</h2>
+                    <div>
+                        <ul>
+                            <li> <a href="https://annechariotte.github.io/portfolio/" target="_blank">
+                                    <img src="images/about/drevensek-portfolio.png" alt="portfolio logo">
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+
+                </div>
+
+                <div class="intro">
+                    <p>Design d'interface et développement par
+                        <a href="https://annechariotte.github.io/portfolio/" target="_blank">Anne-Charlotte
+                            Drevensek</a>.
+                    </p>
+                </div>
+            </section>
+
         </div>
     </main>
 
