feat: links size adjust

--- a/english.html
+++ b/english.html
@@ -2393,8 +2393,8 @@
                         </p>
                         <p>
                             <a href="http://www.la27eregion.fr/mutualiser-linnovation-publique-a-lechelle-territoriale-le-prochain-grand-defi/ "
-                                target="_blank">Is pooling public innovation initiatives at regional / national
-                                scale<br> the next major challenge? (article - FR)
+                                target="_blank">Is pooling public innovation initiatives at<br> regional / national
+                                scale the next major challenge? (article - FR)
                             </a>
                         </p>
                     </div>
