feat: error pluri download

--- a/english.html
+++ b/english.html
@@ -757,19 +757,21 @@
                         style="background-image: url(images/left-hand.png), url(images/right-hand.png);">
 
                         <p>
-                            <a href="assets/outils/mp/1-cartographie-competences.pdf"
+                            <a href="assets/outils/multidisciplinary/1-cartographie-competences.pdf"
                                 download="cartographie_competences" target="_blank">The map of capabilities mobilized in
                                 the lab (shared tool - FR)
                             </a>
                         </p>
                         <p>
-                            <a href="assets/outils/mp/3-fiches-methodes.pdf" download="fiches_methodes_mobilisees"
-                                target="_blank">Examples of methods mobilized (Paris, Dunkerque, Mulhouse- FR)
+                            <a href="assets/outils/multidisciplinary/2-fiches-methodes.pdf"
+                                download="fiches_methodes_mobilisees" target="_blank">Examples of methods mobilized
+                                (Paris, Dunkerque, Mulhouse- FR)
                             </a>
                         </p>
                         <p>
-                            <a href="assets/outils/mp/2-fiches-methodes.pdf" download="fiches_methodes_mobilisees"
-                                target="_blank">Examples of methods mobilized (Metz- FR)
+                            <a href="assets/outils/multidisciplinary/3-fiches-methodes.pdf"
+                                download="fiches_methodes_mobilisees" target="_blank">Examples of methods mobilized
+                                (Metz- FR)
                             </a>
                         </p>
                         <p>
