--- a/index.html
+++ b/index.html
@@ -753,19 +753,21 @@
                         style="background-image: url(images/left-hand.png), url(images/right-hand.png);">
 
                         <p>
-                            <a href="assets/outils/mp/1-cartographie-competences.pdf"
+                            <a href="assets/outils/multidisciplinary/1-cartographie-competences.pdf"
                                 download="cartographie_competences" target="_blank">Cartographie des compétences
                                 mobilisées dans le labo
                             </a>
                         </p>
                         <p>
-                            <a href="assets/outils/mp/2-fiches-methodes.pdf" download="fiches_methodes_mobilisees"
-                                target="_blank">Exemples de Méthodes mobilisées (Paris, Dunkerque, Mulhouse)
+                            <a href="assets/outils/multidisciplinary/2-fiches-methodes.pdf"
+                                download="fiches_methodes_mobilisees" target="_blank">Exemples de Méthodes mobilisées
+                                (Paris, Dunkerque, Mulhouse)
                             </a>
                         </p>
                         <p>
-                            <a href="assets/outils/mp/3-fiches-methodes.pdf" download="fiches_methodes_mobilisees"
-                                target="_blank">Exemples de Méthodes mobilisées (Metz)
+                            <a href="assets/outils/multidisciplinary/3-fiches-methodes.pdf"
+                                download="fiches_methodes_mobilisees" target="_blank">Exemples de Méthodes mobilisées
+                                (Metz)
                             </a>
                         </p>
                         <p>
