--- a/index.html
+++ b/index.html
@@ -2462,10 +2462,10 @@
 
                         <div class="marquee-content">
                             <div class="h1">
-                                <span class="fixed">Se projecter dans le futur</span>
-                                <span>Se projecter dans le futur</span> <span>Se projecter dans le futur</span>
-                                <span>Se projecter dans le futur</span> <span>Se projecter dans le futur</span>
-                                <span>Se projecter dans le futur</span> <span>Se projecter dans le futur</span>
+                                <span class="fixed">Se projeter dans le futur</span>
+                                <span>Se projeter dans le futur</span> <span>Se projeter dans le futur</span>
+                                <span>Se projeter dans le futur</span> <span>Se projeter dans le futur</span>
+                                <span>Se projeter dans le futur</span> <span>Se projecter dans le futur</span>
                             </div>
                         </div>
 
