feat: add tool "projeter dans le futur"

--- a/index.html
+++ b/index.html
@@ -2763,6 +2763,14 @@
                                 target="_blank">Inspiration d’autres labo d’innovation
                             </a>
                         </p>
+                        <p>
+                            <a href="assets/outils/project/8-book-labo.pdf" download="presentation_labo_paca"
+                                target="_blank">Présentation du labo Paca Sud<br>
+                                labo issu de la 1ere génération de la Transfo
+                            </a>
+                        </p>
+
+
                     </div>
 
                 </article>
