feat: add tool link "futur" english

--- a/english.html
+++ b/english.html
@@ -2780,6 +2780,13 @@
                                 target="_blank">Inspiration from other innovation labs (common to all - FR)
                             </a>
                         </p>
+                        <p>
+                            <a href="assets/outils/project/8-book-labo.pdf" download="presentation_labo_paca"
+                                target="_blank">Presentation of the Paca Sud lab<br>
+                                1st generation Transfo lab (FR)
+                            </a>
+                        </p>
+
                     </div>
 
                 </article>
