feat: remove bloomberg partner

--- a/about-english.html
+++ b/about-english.html
@@ -211,8 +211,8 @@
                     <a href="https://www.metzmetropole.fr/" target="_blank">Metropolis of Metz</a> and
                     <a href="https://www.strasbourg.eu/eurometropole-de-strasbourg" target="_blank">The Eurometropolis
                         of Strasbourg</a>.
-                    It is supported by the
-                    <a href="https://www.bloomberg.org/" target="_blank">Bloomberg Philanthropies Foundation</a>.
+                    <!-- It is supported by the
+                    <a href="https://www.bloomberg.org/" target="_blank">Bloomberg Philanthropies Foundation</a>. -->
                 </p>
 
                 <!-- LINKS-BOX -->
