--- a/about.html
+++ b/about.html
@@ -203,8 +203,9 @@
                     <a href="https://www.lillemetropole.fr/" target="_blank">Métropole Européenne de Lille</a>, la
                     <a href="https://www.metzmetropole.fr/" target="_blank">Métropole de Metz</a> et
                     <a href="https://www.strasbourg.eu/eurometropole-de-strasbourg" target="_blank">L’Eurométropole de
-                        Strasbourg</a>. Il est soutenu par la
-                    <a href="https://www.bloomberg.org/" target="_blank">fondation Bloomberg Philanthropies</a>.
+                        Strasbourg</a>.
+                    <!-- Il est soutenu par la
+                    <a href="https://www.bloomberg.org/" target="_blank">fondation Bloomberg Philanthropies</a>. -->
                 </p>
 
                 <!-- LINKS-BOX -->
